--- a/DataStructureAlgorithms/DataStructureAlgorithms.csproj
+++ b/DataStructureAlgorithms/DataStructureAlgorithms.csproj
@@ -7,4 +7,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="word.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="word.txt" />
+  </ItemGroup>
+
 </Project>
