--- a/DataStructureAlgorithms/DataStructureAlgorithms.csproj
+++ b/DataStructureAlgorithms/DataStructureAlgorithms.csproj
@@ -12,7 +12,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="word.txt" />
+    <Content Include="word.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
